--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,7 +1,7 @@
-@import './styles/fonts.scss';
+@import "./styles/fonts.scss";
 
 .wrapper {
-  background-image: url('./images/Bitmap.png');
+  background-image: url("./images/Bitmap.png");
   background-repeat: no-repeat;
   height: 300px;
   max-width: 1440px;
@@ -13,7 +13,15 @@
 
 .mask {
   position: absolute;
-  background: linear-gradient(90deg, rgba(85, 150, 255, 1) 0%, rgba(109, 121, 250, 0.5702) 27.08%, rgba(121, 107, 247, 0.5784) 41.15%, rgba(147, 75, 241, 0.5135) 71.35%, rgba(159, 60, 238, 0.5542) 85.42%, rgba(172, 45, 235, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(85, 150, 255, 1) 0%,
+    rgba(109, 121, 250, 0.5702) 27.08%,
+    rgba(121, 107, 247, 0.5784) 41.15%,
+    rgba(147, 75, 241, 0.5135) 71.35%,
+    rgba(159, 60, 238, 0.5542) 85.42%,
+    rgba(172, 45, 235, 1) 100%
+  );
   width: 100%;
   max-width: 1440px;
   height: 300px;
@@ -40,7 +48,6 @@
   }
 }
 
-
 .todo {
   display: flex;
   flex-direction: column;
@@ -51,6 +58,18 @@
 
 .title {
   text-align: center;
-  font-family: 'Josefin Sans';
+  font-family: "Josefin Sans";
   padding-top: 70px;
+}
+
+.supplementary_menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  padding: 10px;
+  max-width: 320px;
+  width: 100%;
+  margin-top: 16px;
+  border-radius: 10px;
 }
